--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,8 +2,17 @@
     padding: 0
     margin: 0
 body
+    color: #212121
+    background-color: #C9D9DA
+body, input, button, a 
     font-family: 'Raleway', sans-serif
     color: #212121
+a
+    text-decoration: none
 
+main
+    height: 100vh
+    margin-top: -110px
 
 @import 'header'
+@import 'works'
