--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,28 @@
 }
 
 body {
+  color: #212121;
+  background-color: #C9D9DA;
+}
+
+body, input, button, a {
   font-family: 'Raleway', sans-serif;
   color: #212121;
 }
 
-.header {
-  background-color: #C9D9DA;
+a {
+  text-decoration: none;
+}
+
+main {
   height: 100vh;
+  margin-top: -110px;
+}
+
+.header {
+  height: 110px;
+  z-index: 9;
+  position: relative;
 }
 
 .header__socials {
@@ -21,16 +36,33 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: absolute;
   right: 0;
-  top: 83px;
+  top: 193px;
   margin-top: -28px;
 }
 
 .header__avatar {
   position: absolute;
   left: 10%;
-  top: 10%;
+  top: 27%;
+  border-radius: 355px;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.header__avatar:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  -webkit-box-shadow: 0 5px 30px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 5px 30px rgba(0, 0, 0, 0.8);
 }
 
 .header__text {
@@ -51,9 +83,17 @@ body {
   line-height: 42px;
 }
 
+.header__subtitle span {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+}
+
 .hero {
   position: relative;
-  height: 83%;
+  height: 100%;
+  z-index: 8;
 }
 
 .header-container {
@@ -84,13 +124,155 @@ body {
   font-size: 32px;
   line-height: 38px;
   font-weight: 400;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  -webkit-transition: background-size 0.25s ease-in;
+  transition: background-size 0.25s ease-in;
+}
+
+.nav__link:hover {
+  background-size: 100% 88%;
+  color: #000;
 }
 
 .socials__item {
-  margin-bottom: 26px;
+  padding: 13px 0px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
 }
 
-.socials__item:last-child {
-  margin-bottom: 0;
+.socials__item img {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.socials__item:hover img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transform: translateX(-20px);
+          transform: translateX(-20px);
+}
+
+.works {
+  padding-top: 190px;
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card {
+  height: 400px;
+  width: 300px;
+  background: url("../img/logo-skm.jpg") center center no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  padding: 0;
+  margin: 20px 5px;
+  overflow: hidden;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.card-text {
+  position: absolute;
+  text-align: center;
+  top: 15px;
+  width: 100%;
+  font-size: 24px;
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transition-delay: .6s;
+          transition-delay: .6s;
+  opacity: 0;
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+}
+
+.card-buttons {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.card-button {
+  background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 7px 12px;
+  border-radius: 7px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  -webkit-transition: .3s;
+  transition: .3s;
+  opacity: 0;
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
+  -webkit-transition-delay: calc(0.2s * var(--i));
+          transition-delay: calc(0.2s * var(--i));
+}
+
+.card-button:hover {
+  color: #000;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.card-content {
+  position: absolute;
+  width: 100%;
+  height: 175px;
+  bottom: 0;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  -webkit-box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  bottom: -175px;
+  -webkit-transition: bottom .5s;
+  transition: bottom .5s;
+  -webkit-transition-delay: .8s;
+          transition-delay: .8s;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+.card:hover .card-content {
+  bottom: 0;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+.card:hover .card-text {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.card:hover .card-button {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 /*# sourceMappingURL=style.css.map */
