--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,7 +3,10 @@
     margin: 0
 body
     color: #212121
-    background-color: #C9D9DA
+    background: #C9D9DA url('../img/bg.png') center no-repeat
+    background-size: cover
+    position: relative
+    
 body, input, button, a 
     font-family: 'Raleway', sans-serif
     color: #212121
