--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
 
 body {
   color: #212121;
-  background-color: #C9D9DA;
+  background: #C9D9DA url("../img/bg.png") center no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 body, input, button, a {
@@ -28,6 +30,11 @@ main {
   position: relative;
 }
 
+.header__burger {
+  display: none;
+  z-index: 11;
+}
+
 .header__socials {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -40,15 +47,15 @@ main {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  right: 0;
+  right: 5px;
   top: 193px;
   margin-top: -28px;
 }
 
 .header__avatar {
   position: absolute;
-  left: 10%;
-  top: 27%;
+  right: 200px;
+  bottom: 90px;
   border-radius: 355px;
   -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
@@ -67,20 +74,20 @@ main {
 
 .header__text {
   position: absolute;
-  bottom: 10%;
-  right: 15%;
+  top: 220px;
+  left: 100px;
 }
 
 .header__title {
   font-weight: 700;
   font-size: 48px;
-  line-height: 56px;
+  line-height: 1.5;
 }
 
 .header__subtitle {
   font-weight: 500;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.5;
 }
 
 .header__subtitle span {
@@ -101,6 +108,14 @@ main {
       -ms-flex-align: center;
           align-items: center;
   height: 110px;
+}
+
+.logo-link {
+  z-index: 11;
+}
+
+.logo-img {
+  width: 150px;
 }
 
 .nav__list {
@@ -153,6 +168,121 @@ main {
           transform: scale(1.1);
   -webkit-transform: translateX(-20px);
           transform: translateX(-20px);
+}
+
+@media screen and (min-width: 1400px) {
+  .header__avatar {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .header__text {
+    top: 160px;
+    left: 5px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .header__avatar {
+    width: 250px;
+    height: 250px;
+    right: 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__title {
+    font-size: 28px;
+  }
+  .header__subtitle {
+    font-size: 24px;
+  }
+  .header__avatar {
+    bottom: 50px;
+    right: 150px;
+  }
+  .header__burger {
+    z-index: 11;
+    display: block;
+    position: relative;
+    width: 40px;
+    height: 30px;
+  }
+  .header__burger.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .header__burger.active::before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 32px;
+  }
+  .header__burger.active::after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 48px;
+  }
+  .header__burger span {
+    position: absolute;
+    background-color: #000000;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 14px;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger::before, .header__burger::after {
+    content: '';
+    background-color: #000000;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger::before {
+    top: 0px;
+  }
+  .header__burger::after {
+    bottom: 0px;
+  }
+  .header-container.active {
+    position: fixed;
+    height: 100%;
+    background: #C9D9DA;
+    z-index: 10;
+    max-width: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header__socials {
+    display: none;
+  }
+  .header__avatar {
+    left: 50%;
+    margin-left: -125px;
+  }
+  .header__text {
+    position: relative;
+    text-align: center;
+  }
+  .hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .works {
@@ -240,13 +370,12 @@ main {
   position: absolute;
   width: 100%;
   height: 175px;
-  bottom: 0;
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
   -webkit-box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.2);
-  bottom: -175px;
+  bottom: -177px;
   -webkit-transition: bottom .5s;
   transition: bottom .5s;
   -webkit-transition-delay: .8s;
