--- a/sass/_works.sass
+++ b/sass/_works.sass
@@ -1,14 +1,22 @@
 .works
-    padding-top: 190px
+    padding-top: 150px
 .cards
     display: flex
-    justify-content: space-between
-
+    justify-content: space-around
+    position: relative
+    padding: 0 15px
+.card-1
+    background: url('../img/logo-skm.jpg') center center no-repeat
+    background-size: cover
+.card-2
+    background: rgb(197, 197, 197) url('../img/willberries.svg') center center no-repeat
+    background-size: 55%
+.card-3
+    background: rgb(197, 197, 197) url('../img/it.png') center center no-repeat
+    background-size: 30%
 .card
     height: 400px
     width: 300px
-    background: url('../img/logo-skm.jpg') center center no-repeat
-    background-size: cover
     border-radius: 15px
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
     position: relative
@@ -58,7 +66,7 @@
         bottom: -177px
         transition: bottom .5s
         transition-delay: .8s
-    &:hover
+    &:hover,:active
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
         & .card
             &-content
@@ -70,3 +78,49 @@
             &-button
                 opacity: 1
                 transform: translateY(0)
+.modal-slider__prev
+    width: 50px
+    position: absolute
+    left: -15px
+    top: 190px
+.modal-slider__next
+    width: 50px
+    position: absolute
+    right: -15px
+    top: 190px
+@media screen and ( max-width: 1075px )
+    .card
+        width: 250px
+        height: 333px
+    .modal-slider__prev
+        top: 160px
+    .modal-slider__next
+        top: 160px
+
+    
+@media screen and ( max-width: 992px )
+    .card
+        width: 200px
+        height: 266px
+        &-text
+            font-size: 18px
+            top: 30px
+        &-buttons
+            flex-direction: column
+            display: block
+            text-align: center
+        &-button
+            &:first-child
+                display: none
+    .cards
+        padding: 0 25px
+    .modal-slider__prev
+        top: 140px
+        width: 30px
+    .modal-slider__next
+        width: 30px
+        top: 140px
+@media screen and ( max-width: 767px )
+    .cards
+        flex-wrap: wrap
+    
