--- a/sass/_works.sass
+++ b/sass/_works.sass
@@ -66,7 +66,19 @@
         bottom: -177px
         transition: bottom .5s
         transition-delay: .8s
-    &:hover,:active
+    &:hover,:focus
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
+        & .card
+            &-content
+                bottom: 0
+                transition-delay: 0s
+            &-text  
+                opacity: 1
+                transform: translateY(0)
+            &-button
+                opacity: 1
+                transform: translateY(0)
+    &:focus
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
         & .card
             &-content
