--- a/css/style.css
+++ b/css/style.css
@@ -300,17 +300,17 @@ main {
 }
 
 .card-1 {
-  background: url("../img/logo-skm.jpg") center center no-repeat;
+  background: url("../img/logo-skm.png") center center no-repeat;
   background-size: cover;
 }
 
 .card-2 {
-  background: #c5c5c5 url("../img/willberries.svg") center center no-repeat;
+  background: url("../img/willberries.svg") center center no-repeat;
   background-size: 55%;
 }
 
 .card-3 {
-  background: #c5c5c5 url("../img/it.png") center center no-repeat;
+  background: url("../img/it.png") center center no-repeat;
   background-size: 30%;
 }
 
@@ -384,8 +384,8 @@ main {
   position: absolute;
   width: 100%;
   height: 175px;
-  -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
   -webkit-box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.2);
