--- a/sass/_works.sass
+++ b/sass/_works.sass
@@ -6,13 +6,13 @@
     position: relative
     padding: 0 15px
 .card-1
-    background: url('../img/logo-skm.jpg') center center no-repeat
+    background: url('../img/logo-skm.png') center center no-repeat
     background-size: cover
 .card-2
-    background: rgb(197, 197, 197) url('../img/willberries.svg') center center no-repeat
+    background:  url('../img/willberries.svg') center center no-repeat
     background-size: 55%
 .card-3
-    background: rgb(197, 197, 197) url('../img/it.png') center center no-repeat
+    background:  url('../img/it.png') center center no-repeat
     background-size: 30%
 .card
     height: 400px
@@ -60,7 +60,7 @@
         position: absolute
         width: 100%
         height: 175px
-        backdrop-filter: blur(15px)
+        backdrop-filter: blur(2px)
         box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1)
         border: 1px solid rgba(255, 255, 255, 0.2)
         bottom: -177px
